<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clCreateNote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/note_yellow">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llColorList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/color_list"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="6"
            tools:listitem="@layout/adapter_color" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swProtectNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/protect_note"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llColorList" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/add_note_title"
        android:imeOptions="actionNext"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swProtectNote" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/vDivider"
        app:layout_constraintStart_toStartOf="@id/etNoteTitle"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
        tools:text="7 de outubro 10:00" />

    <View
        android:id="@+id/vDivider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toEndOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@id/tvDate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCharacters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvDate"
        app:layout_constraintEnd_toEndOf="@id/etNoteTitle"
        app:layout_constraintStart_toEndOf="@id/vDivider"
        app:layout_constraintTop_toTopOf="@id/tvDate"
        tools:text="0 caractere" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etNoteDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/add_note_description"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_new_note"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>