<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStyleTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/style"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTextSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="16dp"
        android:text="@string/textSize"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvTextSizeStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStyleTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTextSizeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvTextSize"
        app:layout_constraintEnd_toStartOf="@id/ivTextSize"
        app:layout_constraintTop_toTopOf="@id/tvTextSize"
        tools:text="Médio" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTextSize"
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTextSize"
        app:srcCompat="@drawable/ic_select" />

    <View
        android:id="@+id/vTextSize"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTextSize" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="16dp"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvOrderStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextSize" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOrderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvOrder"
        app:layout_constraintEnd_toStartOf="@id/ivOrder"
        app:layout_constraintTop_toTopOf="@id/tvOrder"
        tools:text="Por data de modificação" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivOrder"
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOrder"
        app:srcCompat="@drawable/ic_select" />

    <View
        android:id="@+id/vOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOrder" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="16dp"
        android:text="@string/layout"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvOrderStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrder" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLayoutStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvLayout"
        app:layout_constraintEnd_toStartOf="@id/ivLayout"
        app:layout_constraintTop_toTopOf="@id/tvLayout"
        tools:text="Visualização em grade" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLayout"
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvLayout"
        app:srcCompat="@drawable/ic_select" />

    <View
        android:id="@+id/vLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>